2006-04-17  Dalibor Topic  <robilad@kaffe.org>

        * configure.ac:
        Added CLASSPATH_CONVENIENCE substitution for convenience library LDFLAGS.

        * native/fdlibm/Makefile.am,
        native/jni/classpath/Makefile.am:
        Don't use -module and -version-info for convenience libraries LDFLAGS.
        Fixes libtool warnings.

2006-04-17  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicComboBoxUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicComboPopup.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicInternalFrameUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicLabelUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicListUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicMenuBarUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicMenuUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicOptionPaneUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicPopupMenuUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicScrollBarUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicScrollPaneUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,
	* javax/swing/plaf/basic/BasicSplitPaneUI.java:
	(installKeyboardActions): Marked as stub,
	(uninstallKeyboardActions): Likewise,